--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,7 +1,7 @@
 cmake_minimum_required(VERSION 3.5)
 
 # Project Name
-PROJECT(class2)
+PROJECT(proj)
 
 set_property(GLOBAL PROPERTY USE_FOLDERS ON)
 
@@ -20,41 +20,41 @@ if  (WIN32)
 
 	message(STATUS "Toolkits_DIR set to: " ${TOOLKITS_FOLDER})
 	set(TOOLKITS_FOLDER "" CACHE PATH "Path to Toolkits folder")
-	
+
 	if (NOT EXISTS "${TOOLKITS_FOLDER}/glut/GL/glut.h" OR NOT EXISTS "${TOOLKITS_FOLDER}/glut/glut32.lib")
 		message(ERROR ": GLUT not found")
-	endif (NOT EXISTS "${TOOLKITS_FOLDER}/glut/GL/glut.h" OR NOT EXISTS "${TOOLKITS_FOLDER}/glut/glut32.lib")	
-	
-	
-	include_directories(${TOOLKITS_FOLDER}/glut )
-	target_link_libraries(${PROJECT_NAME} ${OPENGL_LIBRARIES} 
-										  ${TOOLKITS_FOLDER}/glut/glut32.lib)
-	
-	if (EXISTS "${TOOLKITS_FOLDER}/glut/glut32.dll" )
+	endif (NOT EXISTS "${TOOLKITS_FOLDER}/glut/GL/glut.h" OR NOT EXISTS "${TOOLKITS_FOLDER}/glut/glut32.lib")
+
+
+	include_directories(${TOOLKITS_FOLDER}/glut)
+	target_link_libraries(${PROJECT_NAME} ${OPENGL_LIBRARIES}
+			${TOOLKITS_FOLDER}/glut/glut32.lib)
+
+	if (EXISTS "${TOOLKITS_FOLDER}/glut/glut32.dll")
 		file(COPY ${TOOLKITS_FOLDER}/glut/glut32.dll DESTINATION ${CMAKE_BINARY_DIR})
-	endif(EXISTS "${TOOLKITS_FOLDER}/glut/glut32.dll" )	
-	
+	endif (EXISTS "${TOOLKITS_FOLDER}/glut/glut32.dll")
+
 	set_property(DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR} PROPERTY VS_STARTUP_PROJECT ${PROJECT_NAME})
-	
+
 else (WIN32) #Linux and Mac
 
-	set( CMAKE_CXX_FLAGS  "${CMAKE_CXX_FLAGS} Wno-deprecated")
+	set(CMAKE_CXX_FLAGS  "${CMAKE_CXX_FLAGS} Wno-deprecated")
 	find_package(GLUT REQUIRED)
 	include_directories(${GLUT_INCLUDE_DIR})
 	link_directories(${GLUT_LIBRARY_DIRS})
 	add_definitions(${GLUT_DEFINITIONS})
-	
-	target_link_libraries(${PROJECT_NAME} ${OPENGL_LIBRARIES} ${GLUT_LIBRARY} )
-	if(NOT GLUT_FOUND)
-	   message(ERROR ": GLUT not found!")
-	endif(NOT GLUT_FOUND)
-	
-endif(WIN32)
+
+	target_link_libraries(${PROJECT_NAME} ${OPENGL_LIBRARIES} ${GLUT_LIBRARIES})
+	if (NOT GLUT_FOUND)
+		message(ERROR ": GLUT not found!")
+	endif (NOT GLUT_FOUND)
+
+endif (WIN32)
 
 
+add_executable(engine engine.cpp)
+find_package(tinyxml2 REQUIRED)
+target_link_libraries(${PROJECT_NAME} tinyxml2)
+target_link_libraries(engine tinyxml2 ${OPENGL_LIBRARIES} ${GLUT_LIBRARIES})
 
-
-
-
-
-
+add_executable(generator generator.cpp)
