--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -14,42 +14,42 @@ include_directories(${OpenGL_INCLUDE_DIRS})
 link_directories(${OpenGL_LIBRARY_DIRS})
 add_definitions(${OpenGL_DEFINITIONS})
 
-if(NOT OPENGL_FOUND)
+if (NOT OPENGL_FOUND)
     message(ERROR " OPENGL not found!")
-endif(NOT OPENGL_FOUND)
+endif (NOT OPENGL_FOUND)
 
-if  (WIN32)
+if (WIN32)
 
-	message(STATUS "Toolkits_DIR set to: " ${TOOLKITS_FOLDER})
-	set(TOOLKITS_FOLDER "" CACHE PATH "Path to Toolkits folder")
+    message(STATUS "Toolkits_DIR set to: " ${TOOLKITS_FOLDER})
+    set(TOOLKITS_FOLDER "" CACHE PATH "Path to Toolkits folder")
 
-	if (NOT EXISTS "${TOOLKITS_FOLDER}/glut/GL/glut.h" OR NOT EXISTS "${TOOLKITS_FOLDER}/glut/glut32.lib")
-		message(ERROR ": GLUT not found")
-	endif (NOT EXISTS "${TOOLKITS_FOLDER}/glut/GL/glut.h" OR NOT EXISTS "${TOOLKITS_FOLDER}/glut/glut32.lib")
+    if (NOT EXISTS "${TOOLKITS_FOLDER}/glut/GL/glut.h" OR NOT EXISTS "${TOOLKITS_FOLDER}/glut/glut32.lib")
+        message(ERROR ": GLUT not found")
+    endif (NOT EXISTS "${TOOLKITS_FOLDER}/glut/GL/glut.h" OR NOT EXISTS "${TOOLKITS_FOLDER}/glut/glut32.lib")
 
 
-	include_directories(${TOOLKITS_FOLDER}/glut)
-	target_link_libraries(${PROJECT_NAME} ${OPENGL_LIBRARIES}
-			${TOOLKITS_FOLDER}/glut/glut32.lib)
+    include_directories(${TOOLKITS_FOLDER}/glut)
+    target_link_libraries(${PROJECT_NAME} ${OPENGL_LIBRARIES}
+            ${TOOLKITS_FOLDER}/glut/glut32.lib)
 
-	if (EXISTS "${TOOLKITS_FOLDER}/glut/glut32.dll")
-		file(COPY ${TOOLKITS_FOLDER}/glut/glut32.dll DESTINATION ${CMAKE_BINARY_DIR})
-	endif (EXISTS "${TOOLKITS_FOLDER}/glut/glut32.dll")
+    if (EXISTS "${TOOLKITS_FOLDER}/glut/glut32.dll")
+        file(COPY ${TOOLKITS_FOLDER}/glut/glut32.dll DESTINATION ${CMAKE_BINARY_DIR})
+    endif (EXISTS "${TOOLKITS_FOLDER}/glut/glut32.dll")
 
-	set_property(DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR} PROPERTY VS_STARTUP_PROJECT ${PROJECT_NAME})
+    set_property(DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR} PROPERTY VS_STARTUP_PROJECT ${PROJECT_NAME})
 
 else (WIN32) #Linux and Mac
 
-	set(CMAKE_CXX_FLAGS  "${CMAKE_CXX_FLAGS} Wno-deprecated")
-	find_package(GLUT REQUIRED)
-	include_directories(${GLUT_INCLUDE_DIR})
-	link_directories(${GLUT_LIBRARY_DIRS})
-	add_definitions(${GLUT_DEFINITIONS})
+    set(CMAKE_CXX_FLAGS  "${CMAKE_CXX_FLAGS} Wno-deprecated")
+    find_package(GLUT REQUIRED)
+    include_directories(${GLUT_INCLUDE_DIR})
+    link_directories(${GLUT_LIBRARY_DIRS})
+    add_definitions(${GLUT_DEFINITIONS})
 
-	target_link_libraries(${PROJECT_NAME} ${OPENGL_LIBRARIES} ${GLUT_LIBRARIES})
-	if (NOT GLUT_FOUND)
-		message(ERROR ": GLUT not found!")
-	endif (NOT GLUT_FOUND)
+    target_link_libraries(${PROJECT_NAME} ${OPENGL_LIBRARIES} ${GLUT_LIBRARIES})
+    if (NOT GLUT_FOUND)
+        message(ERROR ": GLUT not found!")
+    endif (NOT GLUT_FOUND)
 
 endif (WIN32)
 
@@ -63,10 +63,18 @@ target_link_libraries(${PROJECT_NAME} tinyxml2)
 
 add_executable(engine src/engine.cpp)
 target_link_libraries(engine tinyxml2 parsing ${OPENGL_LIBRARIES} ${GLUT_LIBRARIES})
-#
-#add_custom_command(TARGET engine
-#                   POST_BUILD
-#                   COMMAND ${CMAKE_COMMAND} -E copy engine bin)
 
 
+foreach (folder test_files_phase_1 test_files_phase_2)
+    file(GLOB files "${folder}/*.sh" "${folder}/*.zsh")
+    foreach (file ${files})
+        get_filename_component(tname ${file} NAME)
+        add_custom_target(
+                ${tname}
+                COMMAND ${folder}/${file}
+                WORKING_DIRECTORY ${folder}/
+                DEPENDS engine generator
+        )
+    endforeach ()
+endforeach ()
 
